--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
     "react-navigation": "^4.3.8",
     "react-navigation-drawer": "^2.4.12",
     "react-navigation-material-bottom-tabs": "^2.2.11",
-    "react-navigation-stack": "^2.3.13"
+    "react-navigation-stack": "^2.3.13",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
