--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "react-native-modern-datepicker": "^1.0.0-beta.9",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "^1.8.0",
+    "react-native-responsive-fontsize": "^0.4.3",
+    "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-native-sectioned-multi-select": "^0.7.7",
     "react-native-select-two": "^1.1.0",
+    "react-native-simple-toast": "^1.1.2",
     "react-native-super-grid": "^3.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
