--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-native-awesome-alerts": "^1.3.2",
     "react-native-button": "^3.0.1",
     "react-native-charts-wrapper": "^0.5.7",
+    "react-native-confirmation-code-input": "^1.0.4",
+    "react-native-countdown-component": "^2.7.1",
+    "react-native-countdown-timer": "^0.0.1",
     "react-native-datepicker-dialog": "^0.0.9",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
