--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-navigation-stack": "^2.3.13",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
