--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-native-fontawesome": "^0.2.4",
     "@react-native-community/datetimepicker": "^2.3.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.2",
     "moment": "^2.25.1",
     "native-base": "^2.13.12",
     "react": "16.11.0",
