--- a/ios/App/Info.plist
+++ b/ios/App/Info.plist
@@ -108,6 +108,11 @@
 		<string>Vazir.woff2</string>
 		<string>Far_Aref.ttf</string>
 		<string>Lalezar-Regular.ttf</string>
+		<string>A Google.ttf</string>
+		<string>Mj_Promoter Lt_0.ttf</string>
+		<string>Mj_Promoter Md_0.ttf</string>
+		<string>Mj_Promoter_0.ttf</string>
+		<string>Far_Alphabet.ttf</string>
 	</array>
 </dict>
 </plist>
